// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SFC analyze <script> bindings > auto name inference > basic 1`] = `
"import { toDisplayString as _toDisplayString } from "vue";
export default {
    __name: "FooBar",
    render (_ctx, _cache, $props, $setup, $data, $options) {
        return _toDisplayString(a);
    },
    setup () {
        const a = 1;
        return {
            a
        };
    }
};
"
`;

exports[`SFC analyze <script> bindings > auto name inference > do not overwrite manual name (call) 1`] = `
"import { defineComponent } from 'vue';
import { toDisplayString as _toDisplayString } from "vue";
export default {
    name: 'Baz',
    render (_ctx, _cache, $props, $setup, $data, $options) {
        return _toDisplayString(a);
    },
    setup () {
        const a = 1;
        return {
            a
        };
    }
};
"
`;

exports[`SFC analyze <script> bindings > auto name inference > do not overwrite manual name (object) 1`] = `
"import { toDisplayString as _toDisplayString } from "vue";
export default {
    name: 'Baz',
    render (_ctx, _cache, $props, $setup, $data, $options) {
        return _toDisplayString(a);
    },
    setup () {
        const a = 1;
        return {
            a
        };
    }
};
"
`;

exports[`SFC compile <script setup> > should expose top level declarations 1`] = `
"import { xx } from './x';
let aa = 1;
const bb = 2;
function cc() {}
class dd {
}
import { x } from './x';
export default {
    __name: "anonymous",
    setup () {
        let a = 1;
        const b = 2;
        function c() {}
        class d {
        }
        return {
            get x () {
                return x;
            },
            get a () {
                return a;
            },
            set a (v){
                a = v;
            },
            b,
            c,
            d
        };
    }
};
"
`;

exports[`SFC genDefaultAs > <script setup> only 1`] = `
"const _sfc_ = {
    __name: "anonymous",
    setup () {
        const a = 1;
        return {
            a
        };
    }
};
"
`;

exports[`SFC genDefaultAs > <script setup> only w/ ts 1`] = `
"const _sfc_ = {
    __name: "anonymous",
    setup () {
        const a = 1;
        return {
            a
        };
    }
};
"
`;

exports[`SFC genDefaultAs > <script> + <script setup> 1`] = `
"const _sfc_ = {
    __name: "anonymous",
    setup () {
        const a = 1;
        return {
            a
        };
    }
};
"
`;

exports[`SFC genDefaultAs > <script> + <script setup> w/ ts 1`] = `
"const _sfc_ = {
    __name: "anonymous",
    setup () {
        const a = 1;
        return {
            a
        };
    }
};
"
`;

exports[`SFC genDefaultAs > normal <script> only 1`] = `
"const _sfc_ = {
    __name: "anonymous"
};
"
`;

exports[`SFC genDefaultAs > normal <script> w/ cssVars 1`] = `
"const _sfc_ = {
    __name: "anonymous"
};
"
`;
